# weather

./: README.md  config.py  exceptions.py  gps_coordinates.py  history.json  history.py  history.txt  pyproject.toml  weather  weather_api_service.py  weather_formater.py
