[tool.poetry]
name = "weather"
version = "0.1.0"
description = "App to display weather for specific location"
authors = ["mininscode <mininscode@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
geocoder = "^1.38.1"
mypy = "^0.960"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
